--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Pi SDK (must load before any Pi.* calls) -->
+  <!-- Pi SDK -->
   <script src="https://sdk.minepi.com/pi-sdk.js"></script>
   <script>Pi.init({ version: "2.0", sandbox: true });</script>
 
@@ -15,57 +15,61 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
 
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    html, body { width:100%; height:100%; overflow:hidden; }
-    body {
-      font-family:'Poppins',sans-serif;
-      background: linear-gradient(to bottom, #3199E4 0%, #58C0F2 100%);
-      position:relative;
+    :root {
+      --primary: #3199E4;
+      --secondary: #FF4A4A;
+      --accent: #ffffff;
+      --shadow: rgba(0, 0, 0, 0.4);
     }
-    canvas { display:block; margin:0 auto; visibility:hidden; z-index:1; }
 
-    /* —— Pi Auth & User Display on Home Screen —— */
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    html, body { width: 100%; height: 100%; overflow: hidden; }
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(to bottom, var(--primary) 0%, #58C0F2 100%);
+      position: relative;
+    }
+
+    canvas { display: block; margin: 0 auto; visibility: hidden; z-index: 1; }
+
     #user-info {
-      display:flex; align-items:center; gap:0.5rem;
-      color:#fff; font-size:1rem; text-shadow:0 0 4px #000;
+      display: flex; align-items: center; gap: 0.5rem;
+      color: var(--accent); font-size: 1rem; text-shadow: 0 0 4px #000;
     }
     #user-info button {
-      background:rgba(255,255,255,0.8);
-      border:none; border-radius:0.3rem;
-      padding:0.2rem 0.6rem; font-weight:700; cursor:pointer;
+      background: rgba(255,255,255,0.85);
+      border: none; border-radius: 0.3rem;
+      padding: 0.2rem 0.6rem; font-weight: 700; cursor: pointer;
+      transition: background 0.2s ease;
+    }
+    #user-info button:hover {
+      background: rgba(255,255,255,1);
     }
 
-    /* clouds visible but don’t catch taps */
-    .bg-cloud, .start-cloud {
-      position:absolute;
-      background-image:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 60'><path d='M20,35 C20,25 35,20 45,25 C50,15 65,15 70,25 C85,25 90,35 80,45 C90,45 95,55 85,60 C75,65 55,60 50,50 C40,60 25,60 20,50 C10,50 5,40 20,35 Z' fill='%23FFFFFF'/></svg>");
-      background-size:contain;
-      background-repeat:no-repeat;
-      filter:blur(6px);
-      opacity:.8;
-      animation:drift linear infinite;
-      pointer-events:none;
+    .start-button {
+      background: var(--primary); color: var(--accent);
+      font-size: 1.4rem; font-weight: 700;
+      padding: 0.8rem 2.5rem; border: none; border-radius: 2rem;
+      box-shadow: 0 8px 24px rgba(0,0,0,0.2);
+      cursor: pointer;
+      transition: background 0.2s ease, box-shadow 0.2s ease, transform 0.2s ease;
     }
-    .bg-cloud.one,   .start-cloud.one   { width:260px; height:90px;  top:12%;  left:10%;   animation-duration:40s; }
-    .bg-cloud.two,   .start-cloud.two   { width:200px; height:70px;  top:8%;   right:12%;  animation-duration:50s; }
-    .bg-cloud.three, .start-cloud.three { width:300px; height:100px; top:48%;  left:18%;   animation-duration:45s; }
-    .bg-cloud.four,  .start-cloud.four  { width:280px; height:95px;  bottom:18%; right:22%; animation-duration:55s; }
-    @keyframes drift { from{transform:translateX(0);} to{transform:translateX(-150vw);} }
+    .start-button:hover {
+      background: #318EE6; box-shadow: 0 10px 28px rgba(0,0,0,0.25);
+    }
+    .start-button:active {
+      transform: scale(0.96);
+    }
 
-    #start-screen {
-      position:absolute; inset:0;
-      display:flex; flex-direction:column; align-items:center; justify-content:center; gap:4rem;
-      z-index:2; cursor:pointer;
-    }
     #start-screen h1 {
-      color: #fff;
+      color: var(--accent);
       font-size: 5rem;
       font-weight: 700;
       text-transform: uppercase;
       letter-spacing: 0.1rem;
       text-align: center;
       line-height: 1.1;
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+      text-shadow: 2px 2px 6px var(--shadow);
       -webkit-text-stroke: 1px #1e5c99;
     }
     @media (max-width: 600px) {
@@ -74,112 +78,65 @@
         -webkit-text-stroke: 0.5px #1e5c99;
       }
     }
-    .start-button {
-      background:#3EAFF6; color:#fff;
-      font-size:1.4rem; font-weight:700;
-      padding:0.8rem 2.5rem; border:none; border-radius:2rem;
-      box-shadow:0 8px 24px rgba(0,0,0,0.2); cursor:pointer;
-      margin-top:0.5rem;
-    }
-    .start-button:hover {
-      background:#318EE6; box-shadow:0 10px 28px rgba(0,0,0,0.25);
-    }
-    @media (max-width:600px) {
-      #start-screen h1 { font-size:3rem; }
-      .orbit { width:180px; height:180px; }
-      .ring  { border-width:6px; }
-      .circle{ width:45px; height:45px; }
+
+    /* Refined leaderboard */
+    #leaderboard-screen, #leaderboard {
+      background: rgba(0, 0, 0, 0.7);
+      color: var(--accent);
+      padding: 1rem;
+      border-radius: 0.5rem;
+      max-height: 300px;
+      overflow-y: auto;
+      font-size: 1rem;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
 
-    .orbit { position:relative; width:240px; height:240px; }
-    .ring {
-      position:absolute; width:100%; height:100%;
-      border-radius:50%; border:8px solid rgba(255,255,255,0.6);
-      box-shadow:0 0 20px rgba(255,255,255,0.8);
-      animation:spin 3.5s linear infinite;
-    }
-    .circle { position:absolute; width:60px; height:60px; background:#fff; border-radius:50%; box-shadow:0 0 20px rgba(255,255,255,1); }
-    .circle.top    { top:0;    left:50%; transform:translate(-50%,-50%); }
-    .circle.bottom { bottom:0; left:50%; transform:translate(-50%,50%); }
-    @keyframes spin { from{transform:rotate(0);} to{transform:rotate(360deg);} }
-
-    #pause-overlay {
-      position:absolute; inset:0; display:none;
-      align-items:center; justify-content:center;
-      background:rgba(0,0,0,0.4); z-index:4; pointer-events:none;
-    }
-    #pause-overlay .paused-text {
-      font-family:'Poppins',sans-serif; font-size:4rem; font-weight:700;
-      color:#fff; text-transform:uppercase; letter-spacing:.1rem;
-      -webkit-text-stroke:1px #000;
-    }
-
-    #game-over-screen {
-      position:absolute; inset:0; display:none;
-      flex-direction:column; align-items:center; justify-content:center; gap:1.5rem;
-      z-index:3; cursor:pointer;
-    }
-    #game-over-screen h2 {
-      font-family:'Poppins',sans-serif; color:#FF4A4A; font-size:6rem; font-weight:700;
-      text-transform:uppercase; letter-spacing:.1rem; -webkit-text-stroke:1px #000;
-    }
-    .result-wrapper { position:relative; width:300px; height:300px; }
-    .orb-bg {
-      position:absolute; inset:0; border-radius:50%;
-      background:radial-gradient(circle at center, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.05) 40%, rgba(0,0,0,0) 70%);
-      backdrop-filter:blur(10px);
-    }
-    .results {
-      position:absolute; top:50%; left:50%; transform:translate(-50%,-50%);
-      color:#fff; font-size:2.4rem; font-weight:700;
-      text-transform:uppercase; letter-spacing:.15rem;
-      -webkit-text-stroke:2px #000; text-align:center; line-height:1.3;
-    }
-    .restart {
-      font-family:'Poppins',sans-serif; color:rgba(255,255,255,0.8);
-      font-size:2rem; font-weight:700;
-      text-transform:uppercase; letter-spacing:.1rem;
-      -webkit-text-stroke:1px #000;
-    }
-    @media (max-width:600px) {
-      #game-over-screen h2 { font-size:4rem; }
-      .results        { font-size:1.8rem; }
-      .restart        { font-size:1.6rem; }
-    }
-
-    /* —— Leaderboard in Game Over —— */
-    #leaderboard {
-      margin-top:1rem;
-      background:rgba(0,0,0,0.6);
-      padding:1rem; border-radius:0.5rem;
-      max-height:300px; overflow-y:auto;
-      color:#fff; font-size:1rem;
-      text-align:left; line-height:1.4;
-      width:80%; max-width:400px;
-    }
-    #leaderboard h3 { margin-bottom:0.5rem; }
-
-    /* —— Full-Screen Leaderboard Overlay —— */
-    #leaderboard-screen {
-      position:absolute; inset:0;
-      background:rgba(0,0,0,0.9);
-      display:none; flex-direction:column;
-      align-items:center; overflow-y:auto;
-      padding:2rem; z-index:5;
-    }
-    #leaderboard-screen h2 {
-      color:#fff; margin-bottom:1rem;
-    }
     #leaderboard-screen button {
-      position:absolute; top:1rem; right:1rem;
-      background:#FF4A4A; color:#fff;
-      border:none; border-radius:0.3rem;
-      padding:0.5rem 1rem; font-weight:700;
-      cursor:pointer;
+      background: var(--secondary);
+      color: var(--accent);
+      border: none;
+      border-radius: 0.3rem;
+      padding: 0.5rem 1rem;
+      font-weight: 700;
+      cursor: pointer;
+      transition: background 0.2s ease;
     }
-    #leaderboard-screen ol {
-      color:#fff; list-style-position:inside;
-      width:100%; max-width:400px;
+    #leaderboard-screen button:hover {
+      background: #e53e3e;
+    }
+
+    #pause-overlay .paused-text {
+      font-family: 'Poppins', sans-serif;
+      font-size: 4rem;
+      font-weight: 700;
+      color: var(--accent);
+      text-transform: uppercase;
+      letter-spacing: .1rem;
+      -webkit-text-stroke: 1px #000;
+    }
+
+    /* Additional improvements */
+    .bg-cloud, .start-cloud {
+      filter: blur(6px);
+      opacity: 0.8;
+      pointer-events: none;
+      background-repeat: no-repeat;
+      background-size: contain;
+      animation: drift linear infinite;
+    }
+    @keyframes drift {
+      from { transform: translateX(0); }
+      to { transform: translateX(-150vw); }
+    }
+
+    /* Add parallax background noise */
+    body::before {
+      content: "";
+      position: absolute;
+      width: 100%; height: 100%;
+      background: url('https://transparenttextures.com/patterns/stardust.png');
+      opacity: 0.02;
+      z-index: 0;
     }
   </style>
 </head>
