--- a/index.html
+++ b/index.html
@@ -75,16 +75,25 @@
     }
   }
 
-    .start-button {
-      background:#3EAFF6; color:#fff;
-      font-size:1.4rem; font-weight:700;
-      padding:0.8rem 2.5rem; border:none; border-radius:2rem;
-      box-shadow:0 8px 24px rgba(0,0,0,0.2); cursor:pointer;
-      margin-top:0.5rem;
-    }
-    .start-button:hover {
-      background:#318EE6; box-shadow:0 10px 28px rgba(0,0,0,0.25);
-    }
+.start-button {
+  background: #3EAFF6;
+  color: #fff;
+  font-size: 1.4rem;
+  font-weight: 700;
+  padding: 0.8rem 2.5rem;
+  border: none;
+  border-radius: 2rem;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  margin-top: 0.5rem;
+  transition: all 0.2s ease;
+}
+
+.start-button:hover {
+  background: #318EE6;
+  box-shadow: 0 12px 32px rgba(0, 0, 0, 0.3);
+  transform: translateY(-2px);
+}
     @media (max-width:600px) {
       #start-screen h1 { font-size:3rem; }
       .orbit { width:180px; height:180px; }
