--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <h1>TRICKY<br/>TURNS</h1>
     <button class="start-button" id="startBtn">TAP TO START</button>
-    <button class="start-button" id="viewLeaderboardBtn" style="background:#FF4A4A;">VIEW LEADERBOARD</button>
+    <button class="start-button" id="viewLeaderboardBtn">VIEW LEADERBOARD</button>
     <div class="orbit">
       <div class="ring"></div>
       <div class="circle top"></div>
