--- a/index.html
+++ b/index.html
@@ -168,40 +168,69 @@
       .restart        { font-size:1.6rem; }
     }
 
-    /* —— Leaderboard in Game Over —— */
-    #leaderboard {
-      margin-top:1rem;
-      background:rgba(0,0,0,0.6);
-      padding:1rem; border-radius:0.5rem;
-      max-height:300px; overflow-y:auto;
-      color:#fff; font-size:1rem;
-      text-align:left; line-height:1.4;
-      width:80%; max-width:400px;
-    }
-    #leaderboard h3 { margin-bottom:0.5rem; }
+/* Leaderboard container */
+#leaderboard,
+#leaderboard-screen ol {
+  background: rgba(255, 255, 255, 0.1);
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+  border-radius: 1rem;
+  padding: 1.5rem;
+  font-family: 'Poppins', sans-serif;
+  color: #fff;
+  font-size: 1rem;
+  width: 90%;
+  max-width: 400px;
+  margin: 0 auto;
+  overflow-y: auto;
+  max-height: 300px;
+}
 
-    /* —— Full-Screen Leaderboard Overlay —— */
-    #leaderboard-screen {
-      position:absolute; inset:0;
-      background:rgba(0,0,0,0.9);
-      display:none; flex-direction:column;
-      align-items:center; overflow-y:auto;
-      padding:2rem; z-index:5;
-    }
-    #leaderboard-screen h2 {
-      color:#fff; margin-bottom:1rem;
-    }
-    #leaderboard-screen button {
-      position:absolute; top:1rem; right:1rem;
-      background:#FF4A4A; color:#fff;
-      border:none; border-radius:0.3rem;
-      padding:0.5rem 1rem; font-weight:700;
-      cursor:pointer;
-    }
-    #leaderboard-screen ol {
-      color:#fff; list-style-position:inside;
-      width:100%; max-width:400px;
-    }
+/* Leaderboard title */
+#leaderboard h3,
+#leaderboard-screen h2 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-align: center;
+  margin-bottom: 1rem;
+  color: #fff;
+  text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+
+/* Leaderboard list items */
+#leaderboardEntries li,
+#leaderboardEntriesHome li {
+  background: rgba(0, 0, 0, 0.4);
+  margin: 0.4rem 0;
+  padding: 0.6rem 1rem;
+  border-radius: 0.5rem;
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+}
+
+/* Top 3 standout */
+#leaderboardEntries li:nth-child(1),
+#leaderboardEntriesHome li:nth-child(1) {
+  background: linear-gradient(90deg, #FFD700, #FFA500);
+  color: #000;
+  font-weight: 700;
+}
+#leaderboardEntries li:nth-child(2),
+#leaderboardEntriesHome li:nth-child(2) {
+  background: linear-gradient(90deg, #C0C0C0, #AAAAAA);
+  color: #000;
+  font-weight: 700;
+}
+#leaderboardEntries li:nth-child(3),
+#leaderboardEntriesHome li:nth-child(3) {
+  background: linear-gradient(90deg, #CD7F32, #B87333);
+  color: #000;
+  font-weight: 700;
+}
+
   </style>
 </head>
 <body>
@@ -297,11 +326,12 @@
       const list = document.getElementById('leaderboardEntriesHome');
       list.innerHTML = '';
       const data = await fetch('/api/leaderboard?top=100').then(r=>r.json());
-      data.forEach(e=>{
-        const li = document.createElement('li');
-        li.textContent = `${e.username}: ${e.score}`;
-        list.appendChild(li);
-      });
+      data.forEach((e, index) => {
+  const li = document.createElement('li');
+  li.innerHTML = `<span>#${index + 1}</span> <span>${e.username}</span> <span>${e.score}</span>`;
+  list.appendChild(li);
+});
+
       document.getElementById('leaderboard-screen').style.display = 'flex';
     }
     document.getElementById('viewLeaderboardBtn').addEventListener('click', showHomeLeaderboard);
