--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+ <head>
   <!-- Pi SDK (must load before any Pi.* calls) -->
-  <script src="https://sdk.minepi.com/pi-sdk.js"></script>
-  <script>Pi.init({ version: "2.0", sandbox: true });</script>
-
+  <script src="https://sdk.minepi.com/pi-sdk.js">
+  </script>
+  <script>
+   Pi.init({ version: "2.0", sandbox: true });
+  </script>
   <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Tricky Turns</title>
-
+  <meta content="width=device-width,initial-scale=1" name="viewport"/>
+  <title>
+   Tricky Turns
+  </title>
   <!-- Phaser 3 -->
-  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
+  </script>
   <!-- Poppins Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
-
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
+   * { margin:0; padding:0; box-sizing:border-box; }
     html, body { width:100%; height:100%; overflow:hidden; }
     body {
       font-family:'Poppins',sans-serif;
@@ -294,62 +297,103 @@
   opacity: 1;
 }
   </style>
-</head>
-<body>
-  <div class="bg-cloud one"></div>
-  <div class="bg-cloud two"></div>
-  <div class="bg-cloud three"></div>
-  <div class="bg-cloud four"></div>
-
-  <div id="start-screen">
-    <!-- User info & login on home screen -->
-    <div id="user-info">
-      User: <strong id="username">Guest</strong>
-      <button class="btn-secondary" id="loginBtn">Login</button>
-    </div>
-
-    <div class="start-cloud one"></div>
-    <div class="start-cloud two"></div>
-    <div class="start-cloud three"></div>
-    <div class="start-cloud four"></div>
-
-    <h1>TRICKY<br/>TURNS</h1>
-      <button class="btn-primary" id="startBtn">TAP TO START</button>
-      <button class="btn-primary" id="viewLeaderboardBtn">VIEW LEADERBOARD</button>
-    <div class="orbit">
-      <div class="ring"></div>
-      <div class="circle top"></div>
-      <div class="circle bottom"></div>
-    </div>
+ </head>
+ <body>
+  <div class="bg-cloud one">
   </div>
-
+  <div class="bg-cloud two">
+  </div>
+  <div class="bg-cloud three">
+  </div>
+  <div class="bg-cloud four">
+  </div>
+  <div id="start-screen">
+   <!-- User info & login on home screen -->
+   <div id="user-info">
+    User:
+    <strong id="username">
+     Guest
+    </strong>
+    <button class="btn-secondary" id="loginBtn">
+     Login
+    </button>
+   </div>
+   <div class="start-cloud one">
+   </div>
+   <div class="start-cloud two">
+   </div>
+   <div class="start-cloud three">
+   </div>
+   <div class="start-cloud four">
+   </div>
+   <h1>
+    TRICKY
+    <br/>
+    TURNS
+   </h1>
+   <button class="btn-primary" id="startBtn">
+    TAP TO START
+   </button>
+   <button class="btn-primary" id="viewLeaderboardBtn">
+    VIEW LEADERBOARD
+   </button>
+   <div class="orbit">
+    <div class="ring">
+    </div>
+    <div class="circle top">
+    </div>
+    <div class="circle bottom">
+    </div>
+   </div>
+  </div>
   <!-- Full-screen Leaderboard Overlay -->
   <div id="leaderboard-screen">
-    <button class="btn-primary" id="closeLeaderboardBtn">Close</button>
-    <h2>Top 100 Leaderboard</h2>
-    <ol id="leaderboardEntriesHome"></ol>
+   <button class="btn-primary" id="closeLeaderboardBtn">
+    Close
+   </button>
+   <h2>
+    Top 100 Leaderboard
+   </h2>
+   <ol id="leaderboardEntriesHome">
+   </ol>
   </div>
-
-  <div id="pause-overlay"><div class="paused-text">Paused</div></div>
-
+  <div id="pause-overlay">
+   <div class="paused-text">
+    Paused
+   </div>
+  </div>
   <div id="game-over-screen">
-    <h2>Game Over</h2>
-    <div class="result-wrapper">
-      <div class="orb-bg"></div>
-      <div class="results">
-        SCORE: <span id="finalScore">0</span><br/>
-        BEST:  <span id="bestScore">0</span>
-      </div>
+   <h2>
+    Game Over
+   </h2>
+   <div class="result-wrapper">
+    <div class="orb-bg">
     </div>
-    <div class="restart">Tap to Restart</div>
-    <div id="leaderboard" style="display:none;">
-      <h3>Top 100 Leaderboard</h3>
-      <ol id="leaderboardEntries"></ol>
+    <div class="results">
+     SCORE:
+     <span id="finalScore">
+      0
+     </span>
+     <br/>
+     BEST:
+     <span id="bestScore">
+      0
+     </span>
     </div>
+   </div>
+   <div class="restart">
+    Tap to Restart
+   </div>
+   <div id="leaderboard" style="display:none;">
+    <h3>
+     Top 100 Leaderboard
+    </h3>
+    <ol id="leaderboardEntries">
+    </ol>
+   </div>
   </div>
-
   <script>
-    // —— Pi Authentication setup ——
+   // —— Pi Authentication setup ——
     const scopes = ['username'];
     let piUsername = 'Guest';
     let highScore = 0;
@@ -733,6 +777,7 @@ data.forEach((e, i) => {
       });
     }
   </script>
-  <div id="fade-screen"></div>
-</body>
+  <div id="fade-screen">
+  </div>
+ </body>
 </html>
