--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
-<!DOCTYPE html><html lang="en"><head><script src="https://sdk.minepi.com/pi-sdk.js"></script><script>
+<!DOCTYPE html>
+<html lang="en">
+ <head>
+  <!-- Pi SDK (must load before any Pi.* calls) -->
+  <script src="https://sdk.minepi.com/pi-sdk.js">
+  </script>
+  <!-- JavaScript: Game logic, UI handling, Pi SDK integration -->
+<script>
    Pi.init({ version: "2.0", sandbox: true });
-  </script><meta charset="utf-8"/><meta content="width=device-width,initial-scale=1" name="viewport"/><title>
+  </script>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width,initial-scale=1" name="viewport"/>
+  <title>
    Tricky Turns
-  </title><script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js"></script><link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/><style>
+  </title>
+  <!-- Phaser 3 -->
+  <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
+  </script>
+  <!-- Poppins Font -->
+  <!-- Load Poppins font from Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet"/>
+  <style>
    * { margin:0; padding:0; box-sizing:border-box; }
     html, body { width:100%; height:100%; overflow:hidden; }
     body {
@@ -281,41 +298,103 @@
 #fade-screen.fade-in {
   opacity: 1;
 }
-  </style></head><body><div class="bg-cloud one"></div><div class="bg-cloud two"></div><div class="bg-cloud three"></div><div class="bg-cloud four"></div><div id="start-screen"><div id="user-info">
+  </style>
+ </head>
+ <body>
+  <div class="bg-cloud one">
+  </div>
+  <div class="bg-cloud two">
+  </div>
+  <div class="bg-cloud three">
+  </div>
+  <div class="bg-cloud four">
+  </div>
+  <div id="start-screen">
+   <!-- User info & login on home screen -->
+   <div id="user-info">
     User:
     <strong id="username">
      Guest
-    </strong><button class="btn-secondary" id="loginBtn">
+    </strong>
+    <button class="btn-secondary" id="loginBtn">
      Login
-    </button></div><div class="start-cloud one"></div><div class="start-cloud two"></div><div class="start-cloud three"></div><div class="start-cloud four"></div><h1>
+    </button>
+   </div>
+   <div class="start-cloud one">
+   </div>
+   <div class="start-cloud two">
+   </div>
+   <div class="start-cloud three">
+   </div>
+   <div class="start-cloud four">
+   </div>
+   <h1>
     TRICKY
     <br/>
     TURNS
-   </h1><button class="btn-primary" id="startBtn">
+   </h1>
+   <button class="btn-primary" id="startBtn">
     TAP TO START
-   </button><button class="btn-primary" id="viewLeaderboardBtn">
+   </button>
+   <button class="btn-primary" id="viewLeaderboardBtn">
     VIEW LEADERBOARD
-   </button><div class="orbit"><div class="ring"></div><div class="circle top"></div><div class="circle bottom"></div></div></div><div id="leaderboard-screen"><button class="btn-primary" id="closeLeaderboardBtn">
+   </button>
+   <div class="orbit">
+    <div class="ring">
+    </div>
+    <div class="circle top">
+    </div>
+    <div class="circle bottom">
+    </div>
+   </div>
+  </div>
+  <!-- Full-screen Leaderboard Overlay -->
+  <div id="leaderboard-screen">
+   <button class="btn-primary" id="closeLeaderboardBtn">
     Close
-   </button><h2>
+   </button>
+   <h2>
     Top 100 Leaderboard
-   </h2><ol id="leaderboardEntriesHome"></ol></div><div id="pause-overlay"><div class="paused-text">
+   </h2>
+   <ol id="leaderboardEntriesHome">
+   </ol>
+  </div>
+  <div id="pause-overlay">
+   <div class="paused-text">
     Paused
-   </div></div><div id="game-over-screen"><h2>
+   </div>
+  </div>
+  <div id="game-over-screen">
+   <h2>
     Game Over
-   </h2><div class="result-wrapper"><div class="orb-bg"></div><div class="results">
+   </h2>
+   <div class="result-wrapper">
+    <div class="orb-bg">
+    </div>
+    <div class="results">
      SCORE:
      <span id="finalScore">
       0
-     </span><br/>
+     </span>
+     <br/>
      BEST:
      <span id="bestScore">
       0
-     </span></div></div><div class="restart">
+     </span>
+    </div>
+   </div>
+   <div class="restart">
     Tap to Restart
-   </div><div id="leaderboard" style="display:none;"><h3>
+   </div>
+   <div id="leaderboard" style="display:none;">
+    <h3>
      Top 100 Leaderboard
-    </h3><ol id="leaderboardEntries"></ol></div></div><script>
+    </h3>
+    <ol id="leaderboardEntries">
+    </ol>
+   </div>
+  </div>
+  <script>
    // —— Pi Authentication setup ——
     const scopes = ['username'];
     let piUsername = 'Guest';
@@ -335,11 +414,28 @@ async function initAuth() {
         document.getElementById('loginBtn').style.display = 'none';
         useLocalHighScore = false;
         // fetch user’s server high score
-        const data = await fetch('/api/leaderboard?top=100').then(r=>r.json());
-        const entry = data.find(e=>e.username === piUsername);
-        highScore = entry ? entry.score : 0;
-        // persist locally as well
-        localStorage.setItem('tricky_high_score', highScore);
+let highScoreData;
+try {
+  // First, try to find user in top 100
+  const data = await fetch('/api/leaderboard?top=100').then(r => r.json());
+  highScoreData = data.find(e => e.username === piUsername);
+
+  // If not found in top 100, try fetching directly by username
+  if (!highScoreData) {
+    highScoreData = await fetch(`/api/leaderboard/${piUsername}`).then(r => {
+      if (!r.ok) throw new Error("User not found");
+      return r.json();
+    });
+  }
+
+  highScore = highScoreData.score || 0;
+} catch (e) {
+  console.warn("Failed to fetch persistent high score:", e);
+  highScore = 0; // fallback if error occurs
+}
+
+// Store high score locally
+localStorage.setItem('tricky_high_score', highScore);
       } catch (e) {
         console.log('Not signed in:', e);
       }
@@ -394,7 +490,7 @@ async function showHomeLeaderboard() {
     // —— Game & Leaderboard logic ——
     const LANES = [];
     let gameStarted=false, gameOver=false, gamePaused=false;
-    let direction=1, angle=0, radius=100, speed=3, maxSpeed=6;
+    let direction=1, angle=0, radius=100, speed=3, maxSpeed=20;
     let circle1,circle2,obstacles,points,score=0;
     let scoreText,pauseIcon,pauseOverlay,countdownText;
     let sfx={}, isMuted=false;
@@ -670,11 +766,13 @@ document.getElementById('game-over-screen').addEventListener('pointerdown',()=>{
         }
 
         // POST score
+        if (!userLocalHighScore){
         fetch('/api/leaderboard', {
           method:'POST',
           headers:{ 'Content-Type':'application/json' },
           body: JSON.stringify({ username: piUsername, score: highScore })
         }).catch(console.error);
+      }
 
         // GET top-100 for game-over screen
         fetch('/api/leaderboard?top=100')
@@ -706,4 +804,8 @@ data.forEach((e, i) => {
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
-  </script><div id="fade-screen"></div></body></html>
+  </script>
+  <div id="fade-screen">
+  </div>
+ </body>
+</html>
