--- a/index.html
+++ b/index.html
@@ -4,11 +4,121 @@
 <head>
 <!-- Pi SDK (must load before any Pi.* calls) -->
 <script src="https://sdk.minepi.com/pi-sdk.js">
+
+  // Add a reference to the Phaser game object so we can reassign it
+  let game;
+
+  // Wrap game config and instantiation in a function so we can reuse it
+  function startPhaserGame() {
+    const config = {
+      type: Phaser.AUTO,
+      transparent: true,
+      scale: { mode: Phaser.Scale.FIT, autoCenter: Phaser.Scale.CENTER_BOTH },
+      physics: { default: 'arcade', arcade: { debug: false } },
+      scene: { preload, create, update }
+    };
+    game = new Phaser.Game(config);
+  }
+
+  // First game load
+  startPhaserGame();
+
+  // —— RESTART logic: clean and reload everything ——
+  document.getElementById('restartBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      // Reset game state variables
+      gameStarted = false;
+      gameOver = false;
+      gamePaused = false;
+      direction = 1;
+      angle = 0;
+      radius = 100;
+      speed = 3;
+      maxSpeed = 6;
+      score = 0;
+
+      // Hide UI
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.querySelector('canvas')?.remove();
+
+      // Destroy old game instance
+      if (game) game.destroy(true);
+
+      // Recreate game instance fresh
+      setTimeout(() => {
+        startPhaserGame();  // 🔁 reinitialize game
+        fadeOut();
+      }, 100);
+    });
+  });
+
+  // —— HOME logic: hard reload the page to reset everything
+  document.getElementById('homeBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      window.location.href = window.location.href;
+    });
+  });
+
 </script>
 <!-- JavaScript: Game logic, UI handling, Pi SDK integration -->
 <script>
    Pi.init({ version: "2.0", sandbox: true });
-  </script>
+  
+  // Add a reference to the Phaser game object so we can reassign it
+  let game;
+
+  // Wrap game config and instantiation in a function so we can reuse it
+  function startPhaserGame() {
+    const config = {
+      type: Phaser.AUTO,
+      transparent: true,
+      scale: { mode: Phaser.Scale.FIT, autoCenter: Phaser.Scale.CENTER_BOTH },
+      physics: { default: 'arcade', arcade: { debug: false } },
+      scene: { preload, create, update }
+    };
+    game = new Phaser.Game(config);
+  }
+
+  // First game load
+  startPhaserGame();
+
+  // —— RESTART logic: clean and reload everything ——
+  document.getElementById('restartBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      // Reset game state variables
+      gameStarted = false;
+      gameOver = false;
+      gamePaused = false;
+      direction = 1;
+      angle = 0;
+      radius = 100;
+      speed = 3;
+      maxSpeed = 6;
+      score = 0;
+
+      // Hide UI
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.querySelector('canvas')?.remove();
+
+      // Destroy old game instance
+      if (game) game.destroy(true);
+
+      // Recreate game instance fresh
+      setTimeout(() => {
+        startPhaserGame();  // 🔁 reinitialize game
+        fadeOut();
+      }, 100);
+    });
+  });
+
+  // —— HOME logic: hard reload the page to reset everything
+  document.getElementById('homeBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      window.location.href = window.location.href;
+    });
+  });
+
+</script>
 <meta charset="utf-8"/>
 <meta content="width=device-width,initial-scale=1" name="viewport"/>
 <title>
@@ -16,6 +126,61 @@
   </title>
 <!-- Phaser 3 -->
 <script src="https://cdn.jsdelivr.net/npm/phaser@3.55.2/dist/phaser.min.js">
+
+  // Add a reference to the Phaser game object so we can reassign it
+  let game;
+
+  // Wrap game config and instantiation in a function so we can reuse it
+  function startPhaserGame() {
+    const config = {
+      type: Phaser.AUTO,
+      transparent: true,
+      scale: { mode: Phaser.Scale.FIT, autoCenter: Phaser.Scale.CENTER_BOTH },
+      physics: { default: 'arcade', arcade: { debug: false } },
+      scene: { preload, create, update }
+    };
+    game = new Phaser.Game(config);
+  }
+
+  // First game load
+  startPhaserGame();
+
+  // —— RESTART logic: clean and reload everything ——
+  document.getElementById('restartBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      // Reset game state variables
+      gameStarted = false;
+      gameOver = false;
+      gamePaused = false;
+      direction = 1;
+      angle = 0;
+      radius = 100;
+      speed = 3;
+      maxSpeed = 6;
+      score = 0;
+
+      // Hide UI
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.querySelector('canvas')?.remove();
+
+      // Destroy old game instance
+      if (game) game.destroy(true);
+
+      // Recreate game instance fresh
+      setTimeout(() => {
+        startPhaserGame();  // 🔁 reinitialize game
+        fadeOut();
+      }, 100);
+    });
+  });
+
+  // —— HOME logic: hard reload the page to reset everything
+  document.getElementById('homeBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      window.location.href = window.location.href;
+    });
+  });
+
 </script>
 <!-- Poppins Font -->
 <!-- Load Poppins font from Google Fonts -->
@@ -701,11 +866,7 @@ document.getElementById('restartBtn').addEventListener('click', () => {
 
 
 
-document.getElementById('homeBtn').addEventListener('click', () => {
-  fadeIn(() => {
-    window.location.href = window.location.href;
-  });
-});
+
 
 
     }
@@ -804,7 +965,62 @@ data.forEach((e, i) => {
         yoyo:true, duration:80, ease:'Sine.easeOut'
       });
     }
-  </script>
+  
+  // Add a reference to the Phaser game object so we can reassign it
+  let game;
+
+  // Wrap game config and instantiation in a function so we can reuse it
+  function startPhaserGame() {
+    const config = {
+      type: Phaser.AUTO,
+      transparent: true,
+      scale: { mode: Phaser.Scale.FIT, autoCenter: Phaser.Scale.CENTER_BOTH },
+      physics: { default: 'arcade', arcade: { debug: false } },
+      scene: { preload, create, update }
+    };
+    game = new Phaser.Game(config);
+  }
+
+  // First game load
+  startPhaserGame();
+
+  // —— RESTART logic: clean and reload everything ——
+  document.getElementById('restartBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      // Reset game state variables
+      gameStarted = false;
+      gameOver = false;
+      gamePaused = false;
+      direction = 1;
+      angle = 0;
+      radius = 100;
+      speed = 3;
+      maxSpeed = 6;
+      score = 0;
+
+      // Hide UI
+      document.getElementById('game-over-screen').style.display = 'none';
+      document.querySelector('canvas')?.remove();
+
+      // Destroy old game instance
+      if (game) game.destroy(true);
+
+      // Recreate game instance fresh
+      setTimeout(() => {
+        startPhaserGame();  // 🔁 reinitialize game
+        fadeOut();
+      }, 100);
+    });
+  });
+
+  // —— HOME logic: hard reload the page to reset everything
+  document.getElementById('homeBtn').addEventListener('click', () => {
+    fadeIn(() => {
+      window.location.href = window.location.href;
+    });
+  });
+
+</script>
 <div id="fade-screen">
 </div>
 </body>
